# dot.py

./: .editorconf  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  _dot.py  dot.py  dotdash  dotdash.py  pyproject.toml  validate_tag.sh  validate_version.py
.github/workflows/: python-app.yml  updater-ga.yaml  updater-precommit.yaml  updater.yaml
dot/: __init__.py  __main__.py  _cli.py  _command.py  _logger.py  _utils.py  command.py  logger.py  utils.py
hooks/: pre-commit
test/: conftest.py  test_cli.py  test_cli_dot.py  test_cli_pip.py  test_dashdot.py  test_main.py  utils.py
tests/: conftest.py  test_cli.py  test_doc.py  test_import.py  test_main.py  versions.py
tests/unit/: __init__.py  conftest.py  test_cli.py  test_doc.py  test_helpers.py  test_import.py  test_main.py
tools/: generate_requirements.py
