[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{name = "Vincent QB", email = "vincentqb@gmail.com"}]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3"
]
description = "dot.py is a minimalist python script for managing dotfiles via symbolic links."
name = "dot.py"
readme = "README.md"
requires-python = ">=3.9"
version = "1.5.1"

[project.optional-dependencies]
dev = [
  "codespell",
  "coverage",
  "pre-commit",
  "pytest",
  "pytype",
  "tomli",
  "ty",
  "ruff>=0.5.3"
]

[project.scripts]
"dot.py" = "_dot:dot_from_args"

[project.urls]
"Homepage" = "https://github.com/vincentqb/dot.py/"

[tool.coverage.report]
fail_under = 80
show_missing = false

[tool.coverage.run]
source = ["."]

[tool.hatch.build]
only-include = ["dot.py", "_dot.py"]

[tool.pytype]
inputs = ["dot.py"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["C901", "I", "RUF022"]

[tool.ty.rules]
invalid-assignment = "warn"
missing-argument = "ignore"
unresolved-attribute = "warn"
unresolved-import = "warn"

[tool.uv]
package = true
